# skills

./: .editorconfig  LICENSE  README.md  SPEC.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
js/: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
js/src/: client.ts  errors.ts  github.ts  index.ts  parser.ts  tarball.ts  types.ts
js/src/store/: fs.ts  index.ts  memory.ts
js/tests/: parser.test.ts
js/tests/store/: fs.test.ts  memory.test.ts
python/: README.md  pyproject.toml
python/src/skills_sdk/: __init__.py  client.py  errors.py  github.py  parser.py  tarball.py  types.py
python/src/skills_sdk/store/: __init__.py  fs.py  memory.py
